Add automatic calculation after processing input parameters

--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
         if (riskParam) {
           document.getElementById('risk').value = riskParam;
         }
+         // Call the calculation function after setting parameters
+        calculate();
       }
       
       // Function for Calculation
