Add risk value in results

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       <div class="result-box">
         <h2 id="result">Waiting for Calculation...</h2>
         <p id="total-cost"></p>
+        <p id="risk-amount"></p>
         <p id="error-message" class="error"></p>
       </div>
     </div>
@@ -193,6 +194,7 @@
         document.getElementById("result").innerText =
           "Waiting for Calculation...";
         document.getElementById("total-cost").innerText = "";
+        document.getElementById("risk-amount").innerText = "";
 
         // Get values from input fields
         const portfolioValue = parseFloat(
@@ -254,6 +256,10 @@
             minimumFractionDigits: 2,
             maximumFractionDigits: 2,
           });
+          const riskFormatted = risk.toLocaleString("de-DE", {
+            minimumFractionDigits: 2,
+            maximumFractionDigits: 2,
+          });
 
           // Display results
           document.getElementById(
@@ -262,6 +268,9 @@
           document.getElementById(
             "total-cost"
           ).innerText = `Total cost: ${totalCostFormatted} €`;
+           document.getElementById(
+             "risk-amount"
+           ).innerText = `Risk amount: ${riskFormatted} €`;
         } else {
           document.getElementById("result").innerText =
             "The price must be greater than the stop!";
